--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!--Ini untuk custom alert berhasil dan gagal-->
     <div id="custom-alert-container">
-        <div id="custom-alert" class="alert" role="alert"></div>
+        <div id="custom-alert" style="display: none;"></div>
     </div>
 
     <!--Tabel dari data nilai mahasiswa-->
@@ -48,7 +48,7 @@
                     <div class="card-custom">
                         <h2 class="page-title"><i class="fas fa-clipboard-list me-2"></i>Data Nilai Mahasiswa</h2>
                         <div class="table-responsive">
-                            <table class="table table-hover mt-3">
+                            <table class="table table-hover mt-3 table-responsive-stack">
                                 <thead>
                                     <tr>
                                         <th class="text-center">No.</th>
@@ -107,7 +107,6 @@
             </div>
         </div>
     </div>
-    
     <!--Footer kelompok kami bu-->
 <footer>RPL©Kelompok 3 Kelas 5A.2025</footer>
     <!--Javascript bootstrap-->
