--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Akademik</title>
-    <!-- Bootstrap CSS -->
+    <title>Portal Input Nilai</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Ini untuk ngambil style css dari folder css-->
-    <link rel="stylesheet" href="css/styles.css"> 
-   
+    <!-- Import file dari folder css kami -->
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Navbar Kami Bu-->
 </head>
 <body>
-    <!-- Ini navbar bagian atas website-->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid px-4">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-university me-2"></i>Portal Akademik
+                <i class="fas fa-university me-2"></i>Portal Input Nilai
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -35,20 +34,27 @@
         </div>
     </nav>
 
-    <!--Ini untuk custom alert berhasil dan gagal-->
+    <!-- Notifikasi -->
     <div id="custom-alert-container">
-        <div id="custom-alert" style="display: none;"></div>
+        <div id="custom-alert"></div>
     </div>
 
-    <!--Tabel dari data nilai mahasiswa-->
+    <!-- Halaman tampilan data nilai -->
     <div class="container main-content">
         <div id="page-lihat-data" class="d-none">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <div class="card-custom">
                         <h2 class="page-title"><i class="fas fa-clipboard-list me-2"></i>Data Nilai Mahasiswa</h2>
+                        <!-- Kotak Pencarian -->
+                        <div class="mb-3">
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="fas fa-search"></i></span>
+                                <input type="text" class="form-control" id="searchInput" placeholder="Cari berdasarkan Nama, NIM, atau Mata Kuliah...">
+                            </div>
+                        </div>
                         <div class="table-responsive">
-                            <table class="table table-hover mt-3 table-responsive-stack">
+                            <table class="table table-hover mt-3">
                                 <thead>
                                     <tr>
                                         <th class="text-center">No.</th>
@@ -67,7 +73,7 @@
             </div>
         </div>
 
-        <!--Form pengisian input nilai-->
+    <!-- Halaman Input Data Nilai -->
         <div id="page-input-data">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6">
@@ -86,12 +92,12 @@
                                 <label for="matakuliah" class="form-label">Mata Kuliah</label>
                                 <select class="form-select" id="matakuliah" required>
                                     <option value="" selected disabled>Pilih mata kuliah...</option>
-                                    <option value="MK001 - Technopreneurship" data-sks="3">Technopreneurship</option>
-                                    <option value="MK002 - Manajemen Resiko" data-sks="3">Manajemen Resiko</option>
-                                    <option value="MK003 - Rekayasa Perangkat Lunak" data-sks="3">Rekayasa Perangkat Lunak</option>
-                                    <option value="MK004 - Pemrograman Mobile" data-sks="4">Pemrograman Mobile</option>
-                                    <option value="MK005 - Testing dan Implementasi Sistem" data-sks="3">Testing dan Implementasi Sistem</option>
-                                    <option value="MK006 - Multimedia" data-sks="4">Multimedia</option>
+                                    <option value="MK001 - Technopreneurship">Technopreneurship</option>
+                                    <option value="MK002 - Manajemen Resiko">Manajemen Resiko</option>
+                                    <option value="MK003 - Rekayasa Perangkat Lunak">Rekayasa Perangkat Lunak</option>
+                                    <option value="MK004 - Pemrograman Mobile">Pemrograman Mobile</option>
+                                    <option value="MK005 - Testing dan Implementasi Sistem">Testing dan Implementasi Sistem</option>
+                                    <option value="MK006 - Multimedia">Multimedia</option>
                                 </select>
                             </div>
                             <div class="mb-5">
@@ -107,11 +113,14 @@
             </div>
         </div>
     </div>
-    <!--Footer kelompok kami bu-->
-<footer>RPL©Kelompok 3 Kelas 5A.2025</footer>
-    <!--Javascript bootstrap-->
+
+    <!-- Footer kelompok kami bu-->
+    <footer>
+        RPL&copy;  Kelompok 3 Kelas 5A.2025
+    </footer>
+
+    <!-- Script js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!--Import file logic.js-->
-    <script type="module" src="js/logic.js"></script>
+    <script src="js/logic.js" type="module"></script>
 </body>
 </html>
